remove DriverManager